--- a/language/languageES.properties
+++ b/language/languageES.properties
@@ -1,50 +1,18 @@
 #FramePrin
-App_Name = JUIIN®
+App_Name = AGRICAPP®
 
-#MenuBar
+
 Language = Idioma
 Language_ES = Español
 Language_US = Inglés
 
-#PanelC
-Info_Bt = Informacion de productos
-Gest_Bt = Gestionar productos
-Exit_Bt = Salir
+Home = Inicio
+Sign_up = Registrarse
+Login = Ingresar
 
-#PanelS
-About_Bt = Acerca de
-Contact_Bt = Contacto
-Version_Bt = Version 1.0.0
+#Table
+Name_prod = Nombre
+Type_al = Tipo de alimento
+Price = Precio
+Crop = Cultivo 
 
-#FrameInfo
-Name_Info = Información
-
-#ToolBar
-Back_Bt = Volver
-Next_BT = Adelante
-
-#TipesAl
-Tipe_Sel = Seleccionar
-Tipe_Fruit = Frutas
-Tipe_Vegets = Vegetales
-Tipe_Meat = Carnes
-
-#GestDialog
-Add_Prod = Añadir Producto
-Edit_Prod = Editar Producto
-Del_Prod = Eliminar Producto
-
-#TableHeader
-H_Product = Producto
-H_Price = Precio
-H_Quantity = Cantidad
-H_Tipe = Tipo
-
-#Quantity
-Q_Pound = Libra
-Q_Kilo = Kilogramo
-
-#DialogAdd
-Tip_Prod = Ingrese el nombre del producto
-D_Accept = Aceptar
-D_Cancel = Cancelar 
