--- a/language/languageUS.properties
+++ b/language/languageUS.properties
@@ -1,56 +1,17 @@
 #FramePrin
+App_Name = AGRICAPP®
 
-App_Name = JUIIN®
-
-#MenuBar
 
 Language = Language
 Language_ES = Spanish
 Language_US = English
 
-#PanelC
+Home = Home
+Sign_up = Sign Up
+Login = Login
 
-Info_Bt = Product information
-Gest_Bt = Manage products
-Exit_Bt = Exit
-
-#PanelS
-
-About_Bt = About
-Contact_Bt = Contact
-Version_Bt = Version 1.0.0
-
-#FrameInfo
-
-Name_Info = Information
-
-#ToolBar
-
-Back_Bt = Back
-Next_Bt = Next
-
-#TipesAl
-Tipe_Sel = Select
-Tipe_Fruit = Fruits
-Tipe_Vegets = Vegetables
-Tipe_Meat = Meat
-
-#GestDialog
-Add_Prod = Add Product
-Edit_Prod = Edit Product
-Del_Prod = Delete Product
-
-#TableHeader
-H_Product = Product
-H_Price = Price
-H_Quantity = Quantity
-H_Tipe = Tipe
-
-#Quantity
-Q_Pound = Pound
-Q_Kilo = Kilogram
-
-#DialogAdd
-Tip_Prod = Enter the name of the product
-D_Accept = Accept
-D_Cancel = Cancel
+#Table
+Name_prod = Name
+Type_al = Type food
+Price = Price
+Crop = Crop 
