Lectura API cultivos Agragado Modelo Cultivos Agragado Elementos a tabla

--- a/language/languageES.properties
+++ b/language/languageES.properties
@@ -11,8 +11,14 @@ Sign_up = Registrarse
 Login = Ingresar
 
 #Table
-Name_prod = Nombre
-Type_al = Tipo de alimento
-Price = Precio
 Crop = Cultivo 
+Harvested_area = Area Cosechada
+Planted_area = Area Sembrada
+Type_al = Tipo producto
+Price = Precio(Ton)
+Costs = Costos(Ha)
+Tons = Toneladas
+
+Date = Datos
+Reports = Reportes
 
