--- a/language/languageUS.properties
+++ b/language/languageUS.properties
@@ -11,7 +11,13 @@ Sign_up = Sign Up
 Login = Login
 
 #Table
-Name_prod = Name
-Type_al = Type food
-Price = Price
 Crop = Crop 
+Harvested_area = Harvested area
+Planted_area = Planted area
+Type_al = Type product
+Price = Price(Ton)
+Costs = Costs(Ha)
+Tons = Tons
+
+Date = Dates
+Reports = Reports
