--- a/language/languageES.properties
+++ b/language/languageES.properties
@@ -9,6 +9,7 @@ Language_US = Inglés
 Home = Inicio
 Sign_up = Registrarse
 Login = Ingresar
+Gest_dt = Administrar datos
 
 #Table
 Crop = Cultivo 
@@ -19,6 +20,10 @@ Price = Precio(Ton)
 Costs = Costos(Ha)
 Tons = Toneladas
 
-Date = Datos
+Data = Datos
 Reports = Reportes
+
+Contact = Contactenos
+Contact_info = Dirección: Carrera 5 No. 10-125 Tunja - Boyacá - Colombia\nLíneas telefónicas: +57(8) 7502189 - 7501951\nFax: +57(8) 7500770\nLínea Gratuita: 018000918791\nE-mail: contactenosagricapp@gmail.com
+
 
