--- a/language/languageUS.properties
+++ b/language/languageUS.properties
@@ -9,6 +9,7 @@ Language_US = English
 Home = Home
 Sign_up = Sign Up
 Login = Login
+Gest_dt = Manage dates
 
 #Table
 Crop = Crop 
@@ -19,5 +20,8 @@ Price = Price(Ton)
 Costs = Costs(Ha)
 Tons = Tons
 
-Date = Dates
+Data = Data
 Reports = Reports
+
+Contact = Contact us
+Contact_info = Adress: Career 5 No. 10-125 Tunja - Boyacá - Colombia\nTelephone Lines: +57(8) 7502189 - 7501951\nFax: +57(8) 7500770\nE-mail: contactenosagricapp@gmail.com
